--- a/app/src/main/res/layout/activity_main__login_page.xml
+++ b/app/src/main/res/layout/activity_main__login_page.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.tyler.assignmentrestaurant.MainActivity_LoginPage">
 
     <EditText
-        android:text="Password"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
@@ -21,6 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/button_Login"
+        android:layout_toLeftOf="@+id/button_Login"
         android:onClick="ClickHandle"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -37,6 +38,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/button_Login"
+        android:layout_toLeftOf="@+id/button_Login"
         android:onClick="ClickHandle"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -69,11 +71,9 @@
 
     <TextView
         android:text=""
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button_Login"
-        android:layout_alignRight="@+id/tv_Password"
-        android:layout_alignEnd="@+id/tv_Password"
         android:id="@+id/tv_loginText" />
 
 </RelativeLayout>
